# sqltable

./: .gitignore  .hgignore  .mergify.yml  .readthedocs.yaml  .travis.yml  README  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yaml  test.yml
docs/: Makefile  conf.py  developers.rst  example.rst  history.rst  requirements.txt
sphinxcontrib/: sqltable.py
tools/: travis.sh
