[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib.sqltable"
readme = "README.rst"
authors = [
  {name = "Doug Hellmann", email = "doug@doughellmann.com"},
]
description = "Sphinx extension for embedding database content in documents"
dynamic = ["version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Utilities",
]

requires-python = ">=3.9"

dependencies = [
    "Sphinx>=2.0.0",
    "SQLAlchemy>=2.0",
]

[project.urls]
homepage = "https://sphinxcontrib-sqltable.readthedocs.io/en/latest/"
repository = "http://github.com/sphinx-contrib/sqltable"

[project.optional-dependencies]
linter = [
    "flake8",
]
test = [
    "pytest",
    "beautifulsoup4",
]
build = [
    "build",
    "twine",
]

[tools.setuptools]
packages = [
    "sphinxcontrib.sqltable",
]

# https://github.com/pypa/setuptools_scm/
[tool.setuptools_scm]
