[metadata]
name = sphinxcontrib.sqltable
description-file = README.rst
long-description-content-type = text/x-rst
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Sphinx extension for embedding database content in documents
home-page = http://github.com/sphinx-contrib/datatemplates
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database
    Topic :: Documentation
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[wheel]
universal = 1

[extras]
linter =
    flake8
